# coursework

./: kmeans.cpp  log.txt  main.cpp  script.py  test_docs_list.txt  train_docs_list.txt
clustering/: CMakeLists.txt  cluster.cpp  kmeans.cpp  kmedoids.cpp
generate_documents/: config.py  generate.py  reuters_parser.py
generate_similarity/: CMakeLists.txt  config.h  document.cpp  document.h  generate_similarity.cpp  trie.cpp  trie.h
lib/: CMakeLists.txt  config.cpp  config.h  document.cpp  document.h
report/: report.aux  report.out  report.tex  report.toc
report/src/: clustering.tex  clustering_algorithms.tex  experiment.tex  general_clustering.tex  introduction.tex  literature.tex  results.tex  similarity.tex  suffix_tree.tex  titlepage.tex
scikit_clustering/: .stupid.py.swp  cluster.py  main.py  read.py  stupid.py
